remove INVISIBLE to instead wrapper inline element to fix consistantly delete all inline element

--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,10 @@
   @apply rounded-sm;
 }
 
-.markdown a{
+.markdown a {
   @apply text-sky-500;
+}
+
+.markdown ul {
+  list-style-type: circle;
 }
